[gd_scene load_steps=2 format=3 uid="uid://rt4tyyg7gd1s"]

[ext_resource type="Script" path="res://src/ui/components/panel_bottom_left.gd" id="1_nhq7r"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhq7r")

[node name="HFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -35.0
offset_right = 156.0
offset_bottom = -8.0
grow_vertical = 0
theme_override_constants/v_separation = 8

[node name="Panel_Settings" type="Panel" parent="HFlowContainer"]
visible = false
custom_minimum_size = Vector2(600, 95)
layout_mode = 2

[node name="CheckButton_Pause" type="CheckButton" parent="HFlowContainer/Panel_Settings"]
layout_mode = 1
offset_left = 8.0
offset_top = 60.0
offset_right = 126.0
offset_bottom = 91.0
focus_mode = 0
text = "Pause scenes"
alignment = 2

[node name="OptionButton_Realm" type="OptionButton" parent="HFlowContainer/Panel_Settings"]
layout_mode = 1
offset_left = 64.0
offset_top = 16.0
offset_right = 573.0
offset_bottom = 49.0
tooltip_text = "Select scene to load"
focus_mode = 0
item_count = 5
popup/item_0/text = "mannakia.dcl.eth"
popup/item_0/id = 0
popup/item_1/text = "http://127.0.0.1:8000"
popup/item_1/id = 1
popup/item_2/text = "https://sdk-test-scenes.decentraland.zone"
popup/item_2/id = 2
popup/item_3/text = "https://sdk-team-cdn.decentraland.org/ipfs/goerli-plaza-main"
popup/item_3/id = 3
popup/item_4/text = "https://peer-testing.decentraland.org"
popup/item_4/id = 4

[node name="HSlider_SceneRadius" type="HSlider" parent="HFlowContainer/Panel_Settings"]
layout_mode = 0
offset_left = 304.0
offset_top = 69.0
offset_right = 485.0
offset_bottom = 85.0
focus_mode = 0
min_value = 1.0
max_value = 4.0
value = 2.0
ticks_on_borders = true

[node name="Label_SceneRadiusValue" type="Label" parent="HFlowContainer/Panel_Settings"]
layout_mode = 0
offset_left = 493.0
offset_top = 66.0
offset_right = 502.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0.960784, 0.152941, 0.345098, 1)
theme_override_font_sizes/font_size = 14
text = "2"

[node name="Label2" type="Label" parent="HFlowContainer/Panel_Settings"]
layout_mode = 0
offset_left = 205.0
offset_top = 66.0
offset_right = 297.0
offset_bottom = 89.0
text = "Scene Radius"

[node name="Label" type="Label" parent="HFlowContainer/Panel_Settings"]
layout_mode = 0
offset_left = 10.0
offset_top = 23.0
offset_right = 55.0
offset_bottom = 46.0
text = "Realm"

[node name="Panel_Console" type="Panel" parent="HFlowContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="RichTextLabel_Console" type="RichTextLabel" parent="HFlowContainer/Panel_Console"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
scroll_following = true

[node name="Button_ClearConsole" type="Button" parent="HFlowContainer/Panel_Console"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -35.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Clear"

[node name="VFlowContainer_Tabs" type="VFlowContainer" parent="HFlowContainer"]
layout_mode = 2
theme_override_constants/h_separation = 5

[node name="Button_Collapse" type="Button" parent="HFlowContainer/VFlowContainer_Tabs"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
text = " "

[node name="Button_Console" type="Button" parent="HFlowContainer/VFlowContainer_Tabs"]
layout_mode = 2
focus_mode = 0
text = "Console"

[node name="Button_Settings" type="Button" parent="HFlowContainer/VFlowContainer_Tabs"]
layout_mode = 2
focus_mode = 0
text = "Settings"

[connection signal="pressed" from="HFlowContainer/Panel_Settings/CheckButton_Pause" to="." method="_on_check_button_pause_pressed"]
[connection signal="item_selected" from="HFlowContainer/Panel_Settings/OptionButton_Realm" to="." method="_on_option_button_realm_item_selected"]
[connection signal="drag_ended" from="HFlowContainer/Panel_Settings/HSlider_SceneRadius" to="." method="_on_h_slider_scene_radius_drag_ended"]
[connection signal="pressed" from="HFlowContainer/Panel_Console/Button_ClearConsole" to="." method="_on_button_clear_console_pressed"]
[connection signal="pressed" from="HFlowContainer/VFlowContainer_Tabs/Button_Collapse" to="." method="_on_button_collapse_pressed"]
[connection signal="pressed" from="HFlowContainer/VFlowContainer_Tabs/Button_Console" to="." method="_on_button_tab_pressed" binds= ["console"]]
[connection signal="pressed" from="HFlowContainer/VFlowContainer_Tabs/Button_Settings" to="." method="_on_button_tab_pressed" binds= ["settings"]]
